--- a/jenkinsfile.yaml
+++ b/jenkinsfile.yaml
@@ -7,8 +7,9 @@ pipeline {
   stages {
     stage('Checkout Source') {
       steps {
-        git 'https://github.com/ETCE-LAB/CICD-Test-nodejs.git'
-        branch 'main'
+        git
+           url 'https://github.com/ETCE-LAB/CICD-Test-nodejs.git'
+           branch 'main'
       }
     }
     stage('Build image') {
