--- a/jenkinsfile.yaml
+++ b/jenkinsfile.yaml
@@ -8,8 +8,8 @@ pipeline {
     stage('Checkout Source') {
       steps {
         git
-           url 'https://github.com/ETCE-LAB/CICD-Test-nodejs.git'
-           branch 'main'
+           url: 'https://github.com/ETCE-LAB/CICD-Test-nodejs.git'
+           branch: 'main'
       }
     }
     stage('Build image') {
