--- a/jenkinsfile.yaml
+++ b/jenkinsfile.yaml
@@ -7,9 +7,8 @@ pipeline {
   stages {
     stage('Checkout Source') {
       steps {
-        git
-           url: 'https://github.com/ETCE-LAB/CICD-Test-nodejs.git'
-           branch: 'main'
+        git url: 'https://github.com/ETCE-LAB/CICD-Test-nodejs.git',
+            branch: 'main'
       }
     }
     stage('Build image') {
