Jenkinsfile docker-in-docker test

--- a/jenkinsfile.yaml
+++ b/jenkinsfile.yaml
@@ -3,7 +3,28 @@ pipeline {
     dockerimagename = "ETCE-LAB/CICD-Test-nodejs"
     dockerImage = ""
   }
-  agent any
+  agent {
+    kubernetes {
+      yaml '''
+        apiVersion: v1
+        kind: Pod
+        spec:
+          containers:
+          - name: docker
+          image: docker:latest
+          command:
+            - cat
+            tty: true
+            volumeMounts:
+            - mountPath: /var/run/docker.sock
+              name: docker-sock
+          volumes:
+          - name: docker-sock
+            hostPath:
+              path: /var/run/docker.sock
+      '''
+    }
+  }
   stages {
     stage('Checkout Source') {
       steps {
@@ -13,8 +34,8 @@ pipeline {
     }
     stage('Build image') {
       steps{
-        node {
-          dockerImage = docker.build(dockerimagename)
+        container('docker'){
+          sh 'docker build -t ETCE-LAB/CICD-Test-nodejs .'
         }
       }
     }
