--- a/jenkinsfile.yaml
+++ b/jenkinsfile.yaml
@@ -45,7 +45,7 @@ pipeline {
                                           usernameVariable: 'USERNAME',
                                           passwordVariable: 'PASSWORD')]){
           container('docker'){
-            sh 'docker login -u $USERNAME -p $PASSWORD  https://docker.registry.private'
+            sh 'docker login --insecure-registry -u $USERNAME -p $PASSWORD  https://docker.registry.private'
           }
         }
       }
@@ -53,7 +53,7 @@ pipeline {
     stage('Pushing Image') {
       steps{
         container('docker'){
-          sh 'docker push ${dockerimagename}'
+          sh 'docker push --insecure-registry ${dockerimagename}'
         }
       }
     }
@@ -69,7 +69,7 @@ pipeline {
   post{
     always{
       container('docker'){
-        sh 'docker logout'
+        sh 'docker logout --insecure-registry'
       }
     }
   }
