--- a/jenkinsfile.yaml
+++ b/jenkinsfile.yaml
@@ -45,7 +45,7 @@ pipeline {
                                           usernameVariable: 'USERNAME',
                                           passwordVariable: 'PASSWORD')]){
           container('docker'){
-            sh 'docker login --insecure-registry -u $USERNAME -p $PASSWORD  https://docker.registry.private'
+            sh 'DOCKER_OPTS="--insecure-registry=docker.registry.private:443" docker login -u $USERNAME -p $PASSWORD  https://docker.registry.private'
           }
         }
       }
@@ -53,7 +53,7 @@ pipeline {
     stage('Pushing Image') {
       steps{
         container('docker'){
-          sh 'docker push --insecure-registry ${dockerimagename}'
+          sh 'DOCKER_OPTS="--insecure-registry=docker.registry.private:443" docker push ${dockerimagename}'
         }
       }
     }
