--- a/jenkinsfile.yaml
+++ b/jenkinsfile.yaml
@@ -1,30 +1,10 @@
 pipeline {
   environment {
+    dockerregistry = "https://registry.etce.isse.tu-clausthal.de"
     dockerimagename = "etce-lab/cicd-test-nodejs:latest"
     dockerImage = ""
   }
-  agent {
-    kubernetes {
-      yaml '''
-        apiVersion: v1
-        kind: Pod
-        spec:
-          containers:
-          - name: docker
-            image: docker:latest
-            command:
-            - cat
-            tty: true
-            volumeMounts:
-            - mountPath: /var/run/docker.sock
-              name: docker-sock
-          volumes:
-          - name: docker-sock
-            hostPath:
-              path: /var/run/docker.sock
-      '''
-    }
-  }
+  agent any
   stages {
     stage('Checkout Source') {
       steps {
@@ -34,42 +14,25 @@ pipeline {
     }
     stage('Build image') {
       steps{
-        container('docker'){
-          sh 'docker build -t ${dockerimagename} .'
+        script{
+        dockerImage = docker.build(dockerimagename)
         }
       }
     }
-    stage('Login to private docker registry'){
+    stage('Deploy Image'){
       steps{
-        withCredentials([usernamePassword(credentialsId: 'docker-registry-private',
-                                          usernameVariable: 'USERNAME',
-                                          passwordVariable: 'PASSWORD')]){
-          container('docker'){
-            sh 'DOCKER_OPTS="--insecure-registry=docker.registry.private:443" docker login -u $USERNAME -p $PASSWORD  https://docker.registry.private'
+        script{
+          docker.withRegistry('', "docker-registry-private"){
+          docker.Image.push("$BUILD_NUMBER")
+          docker.Image.push('latest')
           }
         }
       }
     }
-    stage('Pushing Image') {
+    stage('Remove Unused docker image'){
       steps{
-        container('docker'){
-          sh 'DOCKER_OPTS="--insecure-registry=docker.registry.private:443" docker push ${dockerimagename}'
-        }
-      }
-    }
-    stage('Deploying nodejs container to Kubernetes') {
-      steps {
-        script {
-          kubernetesDeploy(configs: "deployment.yaml",
-                                         "service.yaml")
-        }
-      }
-    }
-  }
-  post{
-    always{
-      container('docker'){
-        sh 'docker logout --insecure-registry'
+        sh 'docker rmi dockerimagename:$BUILD_NUMBER'
+        sh 'docker rmi dockerimagename:latest'
       }
     }
   }
