--- a/jenkinsfile.yaml
+++ b/jenkinsfile.yaml
@@ -23,7 +23,7 @@ pipeline {
     stage('Deploy Image'){
       steps{
         script{
-          docker.withRegistry(${dockerregistry}, ${dockerregistrycredential}){
+          docker.withRegistry(dockerregistry, dockerregistrycredential){
           docker.Image.push("$BUILD_NUMBER")
           docker.Image.push('latest')
           }
