--- a/jenkinsfile.yaml
+++ b/jenkinsfile.yaml
@@ -16,7 +16,7 @@ pipeline {
     stage('Build image') {
       steps{
         script{
-        dockerImage = docker.build(dockerimagename +  ":latest")
+        dockerImage = docker.build(dockerimagename)
         }
       }
     }
@@ -24,7 +24,7 @@ pipeline {
       steps{
         script{
           docker.withRegistry(dockerregistry, dockerregistrycredential){
-          dockerImage.push()
+          dockerImage.push("latest")
           }
         }
       }
