--- a/deployment.yaml
+++ b/deployment.yaml
@@ -3,6 +3,7 @@ kind: Deployment
 metadata:
   name: cicd-test-nodejs-deployment #The name of the Kubernetes
         #Deployment to be created in the Kubernetes cluster
+  namespace: cicd-test
   labels:
     app: cicd-test-nodejs
 spec:
@@ -20,5 +21,7 @@ spec:
       - name: cicd-test-nodejs #The name of the react.js application container
         #The Docker image for building the node.js application container
         image: etce-lab/cicd-test-nodejs:latest
+        imagePullSecrets:
+        - name: docker-registry-private
         ports:
         - containerPort: 3000 #The port for the node.js application container
