--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -5,13 +5,13 @@ on:
 
 jobs:
   docker:
-    runs-on: ubuntu-latest
+    runs-on: ETCE-Cluster-0
     steps:
       -
         name: Login to Docker Registry
         uses: docker/login-action@v3
         with:
           registry-auth: |
-          - registry: https://registry.etce.isse.tu-clausthal.de
-            username: ${{ vars.jenkins }}
-            password: ${{ secrets.DOCKER_REGISTRY_PASSWORD }}
+            - registry: https://registry.etce.isse.tu-clausthal.de
+              username: ${{ vars.jenkins }}
+              password: ${{ secrets.DOCKER_REGISTRY_PASSWORD }}
